--- a/Project.toml
+++ b/Project.toml
@@ -80,7 +80,7 @@ Isoband = "0.1"
 KernelDensity = "0.5, 0.6"
 LaTeXStrings = "1.2"
 MacroTools = "0.5"
-MakieCore = "=0.6.3"
+MakieCore = "=0.6.3, 0.6"
 Match = "1.1"
 MathTeXEngine = "0.5"
 MiniQhull = "0.4"
