--- a/Project.toml
+++ b/Project.toml
@@ -81,7 +81,7 @@ KernelDensity = "0.5, 0.6"
 LaTeXStrings = "1.2"
 MacroTools = "0.5"
 MakieCore = "=0.6.3"
-Match = "1.1"
+Match = "1.1, 2"
 MathTeXEngine = "0.5"
 MiniQhull = "0.4"
 Observables = "0.5.3"
