--- a/Project.toml
+++ b/Project.toml
@@ -82,7 +82,7 @@ LaTeXStrings = "1.2"
 MacroTools = "0.5"
 MakieCore = "=0.6.3"
 Match = "1.1"
-MathTeXEngine = "0.5"
+MathTeXEngine = "0.5, 0.6"
 MiniQhull = "0.4"
 Observables = "0.5.3"
 OffsetArrays = "1"
